# topicos-ia-2024-1er-parcial

./: README.md  pyproject.toml
src/: config.py  main.py  models.py  predictor.py
